--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "test": "./node_modules/mocha/bin/mocha ./tests/accept/*.js --timeout 15000"
   },
   "dependencies": {
-    "cors": "^2.7.1",
-    "ejs": "^2.5.1",
-    "express": "^4.14.0",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "ejs": "^2.5.7",
+    "express": "^4.15.4",
     "marked": "^0.3.6",
-    "mongoose": "^4.5.9",
-    "mongoose-seed": "^0.3.1",
-    "morgan": "^1.7.0",
-    "winston": "^2.2.0"
+    "mongoose": "^4.11.12",
+    "mongoose-seed": "^0.3.2",
+    "morgan": "^1.8.2",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
